2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/pandora_data: Added pandora_data folder.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Added refresh_selector functions.
	* central_proxy/central_proxy.cfg: Added SELECTOR_INTERVAL.
	* central_proxy/ProxySelector.pm: Added refresh_selector and deneid_message
	functions.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* ProxyFilter.pm: Delete file.
	* central_proxy.pl: Adapted to use new ProxySelector library.
	* ProxySelector.pm: Now you can develop selections and filters with one
	lib.

2011-09-06 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Delete a varaible which is not used.

2011-09-05 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy.pl: Added monitoring feature for Pandora FMS.
	* central_proxy.cfg: Added monitoring variables to config file.
	* ProxySelector.pm: Changed configuration file path from config file to
	ProxySelector lib.

2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyLib.pm: Fixed an error in thread_exit function

2011-09-01 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyConfig.pm: Created config lib.
	* central_proxy/central_proxy.pl: Moved config functions from ProxyLib
	to ProxyConfig.
	* central_proxy/ProxyLib.pm: Deleted some functions related to configuration.

2011-08-31 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/ProxyFilter.pm: Created dummy ProxyFilter lib
	* central_proxy/proxy_selectors.cfg: Firt version of proxy selector conf file 
	* central_proxy/central_proxy.pl: Added support for ProxyFilter and ProxySelector libs
	* central_proxy/central_proxy.cfg: Added new parameter for proxy selector conf files.
	* central_proxy/ProxySelector.pm: Created dummy ProxySelector lib

2011-08-30 Dario Rodriguez <dario.rodriguez@artica.es>

	* central_proxy/central_proxy.pl: Modified central_proxy to support request