@@ -26,27 +26,39 @@
 // MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
 // GNU General Public License for more details.
 
-$AUTH_METHOD = "none";
-$AUTH_SOURCE = "1";
-$AUTH_USER = "";
-$CASCADING = "0";
-$CAS_SERVER = "";
-$CAS_PORT = "";
-$CAS_AUTH_USER = "";
-$CAS_AUTH_PASS = "";
-$CAS_AUTH_PASSTHROUGH = "1";
-$LOGLEVEL = "2";
-$LOGFILE = "satellite_proxy.log";
-$MAXLOGSIZE = "4000000";
-$TKEEPALIVE_ENABLE = "1";
-$TKEEPALIVE_INTERVAL = "10";
-$IPC_LOADBALANCE = "";
-$IPC_TMPDIR = "/tmp/";
-$ID_ENABLE = "";
-$ID_TIMEOUT = "30";
-$ID_BANTIMEOUT = "600";
-$ID_MAXACCESS = "3";
-$ENCRYPTION_FORCE = "";
-$SEC_IP = "";
-$REQUESTS_LOG = "requests.log";
+function request_log ($client_ip, $buf, $ctype, $dad, $dpo) {
+        global $REQUESTS_LOG;
+
+        if ($ctype == "CONNECT") {
+
+                $line = date("d-m-Y H:i:s")." ".$client_ip." \"CONNECT $dad:$dpo\"";
+        } else {
+
+                $array = explode("\r\n", $buf);
+
+                $resource = $array[0];
+
+                $agent = "";
+
+                foreach ($array as $a) {
+                        $aux = explode (":", $a);
+
+                        if ($aux[0] == "User-Agent") {
+                                $agent = $aux[1];
+                        }
+                }
+                //Example = 07-09-2011 09:20:11 127.0.0.1 "url" - "Agent"
+                $line = date("d-m-Y H:i:s")." ".$client_ip." \"".$resource."\" \"".$agent."\"";
+        }
+
+
+
+        $fd=fopen ($REQUESTS_LOG, "a");
+        if ($fd) {
+                fwrite ($fd, $line."\r\n");
+        }
+
+        fclose($fd);
+}
+
 ?>
